tested the service layer